# offset-diff-drive-controller

./: LICENSE  README.md  offset-diff-drive-dynamics.ipynb
offset_diff_drive_controller/: CMakeLists.txt  offset_diff_drive_controller_plugins.xml  package.xml
offset_diff_drive_controller/include/offset_diff_drive_controller/: dynamics.h  offset_diff_drive_controller.h
offset_diff_drive_controller/src/: dynamics.cpp  offset_diff_drive_controller.cpp
offset_diff_drive_controller/test/: cmd_vel_omni_square.py
offset_diff_drive_description/: CMakeLists.txt  package.xml  watch.sh  watch_gazebo.sh
offset_diff_drive_description/config/: control.yaml
offset_diff_drive_description/launch/: empty_world.launch
offset_diff_drive_description/urdf/: robot.urdf.xacro
