<?xml version="1.0"?>
<package format="2">
  <name>offset_diff_drive_controller</name>
  <version>0.0.0</version>
  <description>The offset_diff_drive_controller package</description>

  <maintainer email="yosuke.matsusaka@gmail.com">Yosuke Matsusaka</maintainer>

  <license>BSD</license>

  <author email="yosuke.matsusaka@gmail.com">Yosuke Matsusaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>pluginlib</depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/offset_diff_drive_controller_plugins.xml"/>
  </export>
</package>
